# Blazing_CUDA_SGEMM

./: CMakeLists.txt  README.md  main.cu
kernels/: 00_cublas_sgemm.cu  01_naive_sgemm.cu  01_naive_vs_cuBLAS.cu  02_global_mem_coalesce.cu  02_global_mem_coalesce_vs_cuBLAS.cu  03_shared_mem_block.cu  03_shared_mem_block_vs_cuBLAS.cu  04_1D_block_tiling.cu  05_2D_block_tiling.cu  06_vectorized.cu  sgemm_kernels.h
